decrease width to fix pule issue on mobile device chrome browser

--- a/src/components/Skills/skills.css
+++ b/src/components/Skills/skills.css
@@ -7,7 +7,7 @@
 }
 
 .flex-skill {
-    @apply flex flex-wrap gap-3 md:gap-8 w-[95%] lg:max-w-8/10 2xl:max-w-6/10 m-auto items-center justify-center;
+    @apply flex flex-wrap gap-3 md:gap-8 w-9/10 lg:max-w-8/10 2xl:max-w-6/10 m-auto items-center justify-center;
 }
 
 .card {
